@@ -25,6 +25,7 @@ h2. Integer constraints
 | domain | {quickrefTemplate: int_var.must.be_in(constant_set)} | |
 | abs | {quickrefTemplate: int_var.abs.must... } | int composite |
 | mult | {quickrefTemplate: (int_var_1 * int_var_2).must... } | int composite |
+| square | {quickrefTemplate: int_var.squared.must... } | int composite |
 
 h2. Integer enumeration constraints
 
