@@ -27,7 +27,7 @@ The following things are supported by Gecode/R.
 ** "Simple relation":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntRelBool.html
 ** "Linear":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntLinearBool.html
 * Finite domain integer variables with the following constraints
-** "Arithmetic":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntArith.html except for square and square root
+** "Arithmetic":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntArith.html except for square root
 ** "Cardinality":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntCard.html except for the ones involving more than one variable array
 ** "Channel":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntChannel.html except for channeling between integer variables and boolean variables
 ** "Distinct":http://www.gecode.org/gecode-doc-search-2.1.1/group__TaskModelIntDistinct.html
